# GraphaRNA

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  app.py  aptamery  compare_pkls.py  copy_gt_targets.py  docker_requirements.txt  environment.yml  evaluate_predictions.py  main_rna_pdb.py  main_rna_pdb_single.py  main_rna_tors.py  model_rna.py  models.py  preprocess_rna_pdb.py  preprocess_rna_pdb_for_P_only.py  profile  pyproject.toml  requirements.txt  run.sh  run_ARENA_pdb_to_aa.sh  run_distributed.sh  sample_rna_pdb.py  sbatch_boltz_all.sh  sbatch_eval_all.sh
datasets/: __init__.py  rna_pdb_dataset.py  torsion_angles_dataset.py
equivariance_tests/: eqv.py  gram-sch-process.py
layers/: basic.py  global_message_passing.py
losses/: losses.py
rna_gnn.egg-info/: PKG-INFO
tests/: test_mask_sampling.py  test_sample_to_pdb.py
tools/: Rfam_analysis.ipynb  compare_with_drfold.ipynb  copy_4&5_segment_pdbs.ipynb  copy_DRfold_results.py  copy_RhoFold_results.py  copy_boltz_results.py  copy_cifs_given_len.py  copy_grapharna_into_segments.py  copy_val_set.py  create_SimRNA_entry_models.py  dcompare.sh  desc-comparison.sh  descriptors_analysis.ipynb  descs-comparison.sh  download_and_process_pdbs_from_rcsb.py  drfold_train.list  eval_pdb_ids.txt  extract_by_Rfam_fams.py  filter_fields_output.sh  find_common_set.py  fix_names.py  get_ignored_ids.py  measure_descriptors.ipynb  move_descriptors_by_pdbid.py  promising-descs-pairs.awk  remove_extra.py  remove_ids.py  remove_list_of_files.py  results_summay.ipynb  ribosomal_rna.ids  run_Simrna.sh  s1_ignored.ids  (+12 more)
(+43 files in other folders)
